internationalization - Add arabic language support to the application

--- a/Web/src/app/blog2/blog2.component.html
+++ b/Web/src/app/blog2/blog2.component.html
@@ -2,8 +2,8 @@
 <section id="contact">
     <div class="container">
       <div class="blogDtl">
-        <h2>All About Sleeves</h2>
-        <div class="date"><span>Oct 08th, 2020 by Admin</span></div>
+        <h2>{{ 'about_sleeves' | translate }}</h2>
+        <div class="date"><span>{{ 'blog2_published_date_and_author' | translate }}</span></div>
 
         <div class="blogcontent">
           <div class="row  justify-content-md-cente">
@@ -11,29 +11,26 @@
              <img src="assets/images/blog02.jpg" alt="">
            </div>
            <div class="col-md-7">
-            <p class="intro">In this post, let's explore the styles and varieties of abayas available. Abaya is available in so many different materials, styles and with a variety of detailing that often, we are confused, to choose one that fits us, the occasion, and our wardrobe.</p>
-            <p>Here is an attempt to keep you informed so that the process of choosing what your heart desires becomes slightly easier for you.</p>
-             <p>Let us break it down to sleeves. The sleeves are an important part of detailing in abaya designs. It could be a bell sleeve, a loose, plain sleeve, or one that fits your arm. Understanding the sleeve patterns will help you choose rightly depending on the occasion.
-              <p>Butterfly sleeve: a wide flared sleeve extending from the armhole, till the wrist, this style offers ease and comfort. Just as the name suggests, this piece definitely adds a butterfly look to the outfit. </p>
-              <p>Puffed sleeve is an evergreen trend, with the sleeve starting loose at the shoulder and tight at the wrist. It’s never too late to get a puffed sleeve abaya as it adds a very vintage look to your wardrobe.</p>
-             
-            </div>
-            <div class="col-md-7">
-               <p>The bell sleeve is the most elegant and modest choice, especially on loose style outfits. Abayas with bell sleeve feature a long fitted sleeve from elbow to shoulder and then flared till the wrist. This again is a classic popular choice.</p>
-              <p>The cuffed sleeves are long and are stitched to fit the wrist like a cuff. The cuffed sleeve is often followed with button details, ribbon works etc. Cuff sleeves are popular among youngsters and the detailing done on the sleeves add to the demand of this pattern.</p>
-              <p>Flared sleeves are the most preferred sleeve pattern. These are modern and stylish as they are most often accentuated with attractive bed work or embroidery work.</p>
-              <p>The other sleeve patterns that are in demand are the bat-wing sleeve, the panel sleeve etc. Most sleeve patterns come in innovative patterns and detailing work. </p>
-              <p>Adding to the sleeve detailing definitely adds elegance and style to the outfit. Most people prefer to have bead or stone work for occasion wear. Work wears mostly have beadwork, embroidery or mild stone work on the sleeves and everyday abayas feature cuff detailing, sleeve cuts, embroidered sleeves etc.</p>
-              <p>Next time, do not forget to shop your favourite sleeve pattern and have one of each to add a dash of style to your wardrobe.</p>
-            </div>
-            <div class="col-md-5">
-             <img src="assets/images/blog002.jpg" alt="">
-           </div>
-         </div>
-
-       </div>
-     </div>
-   </div>
-
+            <p class="intro">{{ 'about_sleeves_desc1' | translate }}</p>
+            <p>{{ 'about_sleeves_desc2' | translate }}</p>
+            <p>{{ 'about_sleeves_desc3' | translate }}</p>
+            <p>{{ 'about_sleeves_desc4' | translate }}</p>
+            <p>{{ 'about_sleeves_desc5' | translate }}</p>
+          </div>
+          <div class="col-md-7">
+            <p>{{ 'about_sleeves_desc6' | translate }}</p>
+            <p>{{ 'about_sleeves_desc7' | translate }}</p>
+            <p>{{ 'about_sleeves_desc8' | translate }}</p>
+            <p>{{ 'about_sleeves_desc9' | translate }}</p>
+            <p>{{ 'about_sleeves_desc10' | translate }}</p>
+            <p>{{ 'about_sleeves_desc11' | translate }}</p>
+          </div>
+          <div class="col-md-5">
+            <img src="assets/images/blog002.jpg" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
  </section>
  <app-footer></app-footer>
