--- a/Web/src/app/contactus/contactus.component.html
+++ b/Web/src/app/contactus/contactus.component.html
@@ -4,15 +4,15 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="titleblk">
-           <h6>Contact Us</h6>
-           <h1>Our Exclusive Store</h1>
+           <h6>{{ 'contact_us' | translate }}</h6>
+           <h1>{{ 'exclusive_store' | translate }}</h1>
 
-           <p>Our offline exclusive store at Fujairah is a favorite destination for luxury abaya collection and designer wears. In addition to a chic collection, the store offers the comfort of female designers and staff for your needs to customize your outfit. Do visit for an impeccable shopping experience that leaves you with irreplaceable additions to your wardrobe.</p>
+           <p>{{ 'exclusive_store_desc' | translate }}</p>
            <ul>
-            <li>Customized designer wear</li>
-            <li>Unique designs</li>
-            <li>Women employees</li>
-            <li>Spacious parking</li>
+            <li>{{ 'customized_designer_wear' | translate }}</li>
+            <li>{{ 'unique_designs' | translate }}</li>
+            <li>{{ 'women_employees' | translate }}</li>
+            <li>{{ 'spacious_parking' | translate }}</li>
           </ul>
         </div>
       </div>
@@ -20,20 +20,22 @@
         <div class="contact-box-content">
           <div class="img-holder">
             <img src="assets/images/contact.jpg" alt="">
-          </div> 
+          </div>
           <div class="text-holder">
             <div class="row">
 
               <div class="col-md-5 col-sm-12">
                 <div class="opening-hours">
                   <div class="title-box center">
-                    <h3>Store Location</h3>
+                    <h3>{{ 'store_location' | translate }}</h3>
                   </div>
                   <div class="inner-content">
-                    <p>NishOmi Designer Abayas<br>
-                      Shop 5, Opp. Bin Moosa Central Pharmacy, <br>
-                      Fujairah,<br>
-                    United Arab Emirates</p>
+                    <p>
+                      {{ 'location_address_line1' | translate }}<br>
+                      {{ 'location_address_line2' | translate }}<br>
+                      {{ 'location_address_line3' | translate }}<br>
+                      {{ 'location_address_line4' | translate }}
+                    </p>
                   </div>
                 </div>
               </div>
@@ -41,20 +43,14 @@
               <div class="col-md-7 col-sm-12">
                 <div class="quick-contact-box">
                   <div class="title-box">
-                    <h3>Contact</h3>
+                    <h3>{{ 'contact' | translate }}</h3>
                   </div>
                   <ul>
-                    <li>
-                     <p>+971 505 038 393</p>
-                   </li>
-                   <li>
-                    <p>+971 505 038 393</p>
-                  </li>
-                  <li>
-                    <p><a href="mailto:info@nishomiabayas.com">info@nishomiabayas.com</a></p>
-                  </li>
+                    <li dir="ltr"><p>+971 505 038 393</p></li>
+                    <li dir="ltr"><p>+971 505 038 393</p></li>
+                    <li><p><a href="mailto:info@nishomiabayas.com">info@nishomiabayas.com</a></p></li>
                    <!--  <li>
-                      <p>P.O.Box- 5992, 
+                      <p>P.O.Box- 5992,
                        Riyadh - 11432 <br>
                      Kingdom of Saudi Arabia</p>
                    </li> -->
@@ -62,8 +58,8 @@
                </div>
              </div>
 
-           </div>   
-         </div>     
+           </div>
+         </div>
        </div>
      </div>
 
