--- a/Web/src/app/privacy/privacy.component.html
+++ b/Web/src/app/privacy/privacy.component.html
@@ -2,60 +2,60 @@
 <section id="contact">
     <div class="container">
       <div class="policy">
-        <h2>Privacy policy <span>Effective Date: January 1, 2020</span></h2>
-        <p>nishOmi (collectively, “us” or “we”) understand that your privacy is important to you. We are committed to respecting your privacy and protecting your personal data, which is any information that is capable of identifying you as an individual person, collected via all websites or apps that post a link to this Privacy Policy (collectively, “the Sites”). This Privacy Policy describes how we handle and protect your personal data in connection with the Sites, in our capacity as data controllers. Please see our <a href="terms.html" target="_self">Terms & Conditions</a> for more information about our online terms and policies in general.</p>
-        <h3>Information we collect</h3>
-        <p>nishOmi collects personal data on certain areas of the Sites when you register for nishOmi newsletters and alerts. The personal data collected varies across the Sites and may include information that you provide, such as your name and e-mail address. For instance, by registering for nishOmi newsletters or alerts, you agree to receive the correspondence to which you have subscribed at the e-mail address that you provided at registration. Only nishOmi or its agents will contact you using this e-mail address. We will send e-mails to this address related to your registration.</p>
-        <p>We may also automatically collect information about the devices you use to interact with our Sites. The information we automatically collect may include IP address, device identifier, web browser, and browsing information collected through cookies, web beacons, pixels, clear gifs, and other similar technologies (collectively “Cookies and Other Tracking Technologies”) on our Sites. We may also automatically collect information about how you use the Sites, such as what you have searched for and viewed on the Sites. The information automatically collected will be associated with any personal data you have provided.</p>
-        <h3>Use of information</h3>
-        <p>The personal data we collect may be used where we have your specific consent to do so, or where nishOmi has a legitimate interest in or other legal basis for processing such information. In some situations, the collection of personal data may be required for the operation of the Sites or to provide certain services or products. nishOmi uses your personal data to fulfill your requests for information, personalize content that you view or receive on the Sites, evaluate and improve our services, distribute newsletters and alerts to you,analyze the Sites’ performance and functioning, publish your letters to the editor or comments,enforce our Terms & Conditions, comply with all applicable laws and corporate reporting obligations, enforce nishOmi’s agreements, and accomplish other purposes you may initiate or request. We may keep any of your personal data on file and use it to contact you.</p>
-        <p>nishOmi may use first and third party Cookies and Other Tracking Technologies to manage our Sites and our services and collect analytics about how you use them. The information provided throughout this Privacy Policy about cookies also applies to these other tracking technologies. Our Sites do not collect personal data about your online activities over time and across third party websites or online services. Therefore, “do not track” signals transmitted from web browsers do not apply to our Sites, and we do not alter any of our data collection and use practices upon receipt of such a signal.</p>
-        ​<h3>Use of information collected via mobile devices</h3>
-        <p>In connection with our mobile applications, nishOmi may use third party service providers to analyze non-personally identifiable user activity to fix errors, monitor usage, and improve the performance of the mobile applications. For example, nishOmi receives reports on some of our mobile applications’ aggregate usage and browsing patterns, including information about the type of device used, articles accessed, and other events occurring within our apps. nishOmi also receives reports on certain errors occurring within mobile applications. None of these third party service providers gathers information in a manner intended to identify any particular user personally.</p>
-        <h3>Data recipients and international data transfers</h3>
-        <p>Personal data collected on the Sites may be transferred from time to time to nishOmi and their personnel across our global organization, as well as to our third party service providers located throughout the world, including in countries where the local law may grant you fewer rights than you have in your own country. Additionally, the Sites may be viewed and hosted by nishOmi and our third party service providers anywhere in the world. Where required by law, we have put in place legal mechanisms designed to ensure adequate data protection of your personal data that is processed by nishOmi and third- party service providers, including the transfer of your personal data to countries other than the one in which you reside. If you would like more information about these legal mechanisms, which may include the EU’s Standard Contractual Clauses, please contact us at the address below. By using any of the Sites and providing information on any of them, you voluntarily consent to such trans-border transfer and hosting of such information.</p>
-        <p>nishOmi will not intentionally disclose or transfer (and will take reasonable steps to prevent the unauthorized or accidental disclosure of) your personal data to third parties without your consent, whether for such third parties’ own marketing purposes or otherwise, except as follows.nishOmi may provide access to your personal data to third party service providers engaged by nishOmi to provide services related to the Sites, provided that such third- party service providers will first agree to maintain the strict confidentiality of such information and provide the same level of data security as provided by nishOmi.</p>
-        <p>We also may share your personal data with third party service providers who perform services and functions on our behalf to support our interactions with you, including, for example, processing recruitment materials, administering surveys or contests, or communicating with you. These third party service providers are not permitted to use or disclose your personal data except as necessary to perform services on our behalf or to comply with legal requirements.</p>
-        <p>In addition, we may disclose information about you:</p>
+        <h2>{{ 'privacy_policy' | translate }} <span>{{ 'privacy_policy_effective_date' | translate }}</span></h2>
+        <p>{{ 'privacy_policy_desc1.1' | translate }}<a href="terms.html" target="_self">{{ 'terms_and_conditions' | translate }}</a> {{ 'privacy_policy_desc1.2' | translate }}</p>
+        <h3>{{ 'privacy_policy_subtitle1' | translate }}</h3>
+        <p>{{ 'privacy_policy_1_desc1' | translate }}</p>
+        <p>{{ 'privacy_policy_1_desc2' | translate }}</p>
+        <h3>{{ 'privacy_policy_subtitle2' | translate }}</h3>
+        <p>{{ 'privacy_policy_2_desc1' | translate }}</p>
+        <p>{{ 'privacy_policy_2_desc2' | translate }}</p>
+        ​<h3>{{ 'privacy_policy_subtitle3' | translate }}</h3>
+        <p>{{ 'privacy_policy_3_desc1' | translate }}</p>
+        <h3>{{ 'privacy_policy_subtitle4' | translate }}</h3>
+        <p>{{ 'privacy_policy_4_desc1' | translate }}</p>
+        <p>{{ 'privacy_policy_4_desc2' | translate }}</p>
+        <p>{{ 'privacy_policy_4_desc3' | translate }}</p>
+        <p>{{ 'privacy_policy_4_desc4' | translate }}</p>
         <ul>
-          <li>If we are required to do so by law or legal process;</li>
-          <li>To law enforcement authorities or other government officials;</li>
-          <li>When we believe disclosure is necessary or appropriate to prevent physical harm or financial loss or in connection with an investigation of suspected or actual illegal activity;</li>
-          <li>If disclosure is necessary to protect the vital interests of a person;</li>
-          <li>To enforce our <a href="terms.html" target="_self">Terms & Conditions</a>;</li>
-          <li>To protect our property, services and legal rights;</li>
-          <li>To prevent fraud against nishOmi, our subsidiaries, affiliates and/or business partners;</li>
-          <li>To support auditing, compliance, and corporate governance functions; or</li>
-          <li>To comply with any and all applicable laws.</li>
+          <li>{{ 'privacy_policy_4_info1' | translate }}</li>
+          <li>{{ 'privacy_policy_4_info2' | translate }}</li>
+          <li>{{ 'privacy_policy_4_info3' | translate }}</li>
+          <li>{{ 'privacy_policy_4_info4' | translate }}</li>
+          <li>{{ 'privacy_policy_4_info5' | translate }}<a href="terms.html" target="_self">Terms & Conditions</a>;</li>
+          <li>{{ 'privacy_policy_4_info6' | translate }}</li>
+          <li>{{ 'privacy_policy_4_info7' | translate }}</li>
+          <li>{{ 'privacy_policy_4_info8' | translate }}</li>
+          <li>{{ 'privacy_policy_4_info9' | translate }}</li>
         </ul>
-        <p>We maintain processes designed to ensure that any processing of personal data by third party service providers is consistent with this Privacy Policy and protects the confidentiality, availability, and integrity of your personal data. In addition, we may disclose or transfer your personal data in the event of a re-organization, merger, sale, joint venture, assignment, or other transfer or disposition of all or any portion of our business.</p>
-        <h3>User forums</h3>
-        <p>You should be aware that whenever you publicly disclose information online, that information could be collected and used by others. nishOmi is not responsible for any action or policies of any third parties who collect information that users publicly disclose in any such forums on the Sites.</p>
-        <h3>Link to third-party sites</h3>
-        <p>nishOmi may provide links to third-party websites or information as a service to our users. If you use these links, you will leave the Sites. Such links do not constitute or imply an endorsement, sponsorship, or recommendation by nishOmi of the third party, the third- party website, or the information contained therein, and nishOmi shall not be responsible or liable for your use thereof. Such use shall be subject to the Terms & Conditions and privacy policies applicable to those sites.</p>
-        <h3>Social networking</h3>
-        <p>The Sites may allow you to sign into and associate your social network accounts including, but not limited to, Twitter and LinkedIn with nishOmi The Sites also may allow you to log in to a nishOmi account using certain social network account credentials.</p>
-        <p>By associating your social network account with nishOmi or logging in to a nishOmi account using your social network account credentials, you give us permission to access information that you have made available in your public profile for that social network account. The information available in your public profile varies based on the social network and your settings, but may include your email address, real name, profile picture, gender, and location. We use the information we receive from your social network account in accordance with the social network’s Terms & Conditions and this Privacy Policy. Please refer to the privacy settings in your social network account for information about what data is shared with nishOmi and other connected applications and to manage the data that is shared through your account, including information about your activities using our Sites. If you would like to disconnect a social media account from us, refer to the settings of that social network account and its provider.</p>
-        <h3>Security</h3>
-        <p>nishOmi has implemented generally accepted standards of technology and operational security to protect personal data from loss, misuse, alteration, or destruction. Only authorized nishOmi personnel and third party service providers are provided access to personal data, and these employees and service providers are required to treat this information as confidential. Despite these precautions however, nishOmi cannot guarantee that unauthorized persons will not obtain access to your personal data.</p>
-        <h3>Data retention policy</h3>
-        <p>nishOmi retains personal data, as necessary, for the duration of the relevant business relationship. We may also retain personal data for longer than the duration of the business relationship should we need to retain it to protect ourselves against legal claims, use it for analysis or historical record-keeping, or comply with our information management policies and schedules. If you request that we delete your personal data, nishOmi will make reasonable attempts to delete all instances of the information in their entirety. For requests for access, corrections, or deletion, please refer to the “Your Rights” section of this Privacy Policy.</p>
-        <h3>Children</h3>
-        <p>The Sites are not designed for or directed at children 13 years of age or younger, and nishOmi does not intentionally collect or maintain personal data about anyone under this age.</p>
-        <h3>Your rights</h3>
-        <p>Where granted by local law, you may have the right to request access to the personal data that we have collected about you for the purposes of reviewing, modifying, or requesting deletion of the data. You may also have the right to request a copy of the personal data that we have collected about you and to have any inaccuracies in that data corrected. In certain circumstances, you may also request that we cease processing your personal data. If you would like to make a request to access, review, or correct the personal data we have collected about you, or to discuss how we process your personal data, please contact us at <a href="mailto:info@nishOmi.com" target="_self" data-content="info@nishOmi.com" data-type="mail"> info@nishOmi.com</a>. To help protect your privacy and security, we will take reasonable steps to verify your identity, such as requiring a password and user ID, before granting access to your personal data. We will make reasonable attempts to promptly investigate, comply with, or otherwise respond to your requests as may be required by applicable law. Different laws may prevent us from providing access to your personal data or otherwise fully complying with your request depending upon the circumstances and the request, such as for example, where producing your information may reveal the identity of someone else. We reserve the right to charge an appropriate fee for complying with your request where allowed by applicable law, and/or deny your requests where they may be manifestly unfounded, and/or excessive, or otherwise objectionable or unwarranted under applicable law. In addition, and where granted by local law, you have the legal right to lodge a complaint with a competent data protection authority. You may also unsubscribe from mailing lists or any registrations on any of the Sites. To do so, please either follow instructions on the page of the Site on which you have provided such information, subscribed or registered or contact us at the address provide at the bottom of this Privacy Policy.</p>
-        <h3>Your California privacy rights</h3>
-        <p>Pursuant to California Civil Code Section 1798.83(c)(2), nishOmi does not share your personal data with third parties for those third parties’ direct marketing use. If you are a California resident under the age of 18, and a registered user of any of the Sites where this Privacy Policy is posted, California Business and Professions Code Section 22581 permits you to request and obtain removal of content or information you have publicly posted. To make such a request, please send an email with a detailed description of the specific content or information to <a href="mailto:info@nishomiabayas.com" target="_self" data-content="info@nishomiabayas.com" data-type="mail"> info@nishomiabayas.com</a>. Please be aware that such a request does not ensure complete or comprehensive removal of the content or information you have posted and that there may be circumstances in which the law does not require or allow removal even if requested.</p>
-        <h3>Consent; changes to Privacy Policy</h3>
-        <p>By using the Sites, you consent to the collection, use, and storage of your personal data by us in the manner described in this Privacy Policy and elsewhere on the Sites. We reserve the right to make changes to this Privacy Policy from time to time. We will alert you to any such changes by updating this Privacy Policy. If we make material changes to this Privacy Policy that increase our rights to use personal data that we have previously collected about you, we will obtain your consent either through an email to your registered email address or by prominently posting information about the changes on our Sites.</p>
-        <h3>Contact us</h3>
-        <p>If you have any questions about our Privacy Policy, please contact us at:</p>
+        <p>{{ 'privacy_policy_4_desc5' | translate }}</p>
+        <h3>{{ 'privacy_policy_subtitle5' | translate }}</h3>
+        <p>{{ 'privacy_policy_5_desc1' | translate }}</p>
+        <h3>{{ 'privacy_policy_subtitle6' | translate }}</h3>
+        <p>{{ 'privacy_policy_6_desc1' | translate }}</p>
+        <h3>{{ 'privacy_policy_subtitle7' | translate }}</h3>
+        <p>{{ 'privacy_policy_7_desc1' | translate }}</p>
+        <p>{{ 'privacy_policy_7_desc2' | translate }}</p>
+        <h3>{{ 'privacy_policy_subtitle8' | translate }}</h3>
+        <p>{{ 'privacy_policy_8_desc1' | translate }}</p>
+        <h3>{{ 'privacy_policy_subtitle9' | translate }}</h3>
+        <p>{{ 'privacy_policy_9_desc1' | translate }}</p>
+        <h3>{{ 'privacy_policy_subtitle10' | translate }}</h3>
+        <p>{{ 'privacy_policy_10_desc1' | translate }}</p>
+        <h3>{{ 'privacy_policy_subtitle11' | translate }}</h3>
+        <p>{{ 'privacy_policy_11_desc1.1' | translate }}<a href="mailto:info@nishOmi.com" target="_self" data-content="info@nishOmi.com" data-type="mail"> info@nishOmi.com</a>.{{ 'privacy_policy_11_desc1.2' | translate }}</p>
+        <h3>{{ 'privacy_policy_subtitle12' | translate }}</h3>
+        <p>{{ 'privacy_policy_12_desc1.1' | translate }}<a href="mailto:info@nishomiabayas.com" target="_self" data-content="info@nishomiabayas.com" data-type="mail"> info@nishomiabayas.com</a>. {{ 'privacy_policy_12_desc1.2' | translate }}</p>
+        <h3>{{ 'privacy_policy_subtitle13' | translate }}</h3>
+        <p>{{ 'privacy_policy_13_desc1' | translate }}</p>
+        <h3>{{ 'privacy_policy_subtitle14' | translate }}</h3>
+        <p>{{ 'privacy_policy_14_desc1' | translate }}</p>
         <address>
-         nishOmi Designer Abayas<br>
-         Shop 5, Opp. Bin Moosa Central Pharmacy,<br>
-         Fujairah,<br>
-         United Arab Emirates<br>
-         <a href="mailto:info@nishomiabayas.com" target="_self" data-content="info@nishomiabayas.com" data-type="mail"> info@nishomiabayas.com</a>
+          {{ 'location_address_line1' | translate }}<br>
+          {{ 'location_address_line2' | translate }}<br>
+          {{ 'location_address_line3' | translate }}<br>
+          {{ 'location_address_line4' | translate }}<br>
+        <a href="mailto:info@nishomiabayas.com" target="_self" data-content="info@nishomiabayas.com" data-type="mail"> info@nishomiabayas.com</a>
        </address>
      </div>
    </div>
