--- a/Web/src/assets/css/responsive.css
+++ b/Web/src/assets/css/responsive.css
@@ -32,6 +32,7 @@
   .hmeproduct .caroprod {
     width: 100%;
     margin-left: 0%;
+    margin-right: 0%;
     padding: 0 15px;
   }
   .story .banntxt h1, .titleblk h1 {
@@ -105,7 +106,7 @@
     margin-bottom: 15px;
   }
   #story .row {
-    margin: 0; 
+    margin: 0;
   }
   #story .row .half {
     width: 100%;
@@ -504,7 +505,7 @@
     margin-bottom: 15px;
   }
   .hmeblog ul li .hmeblksg {
-    margin:0; 
+    margin:0;
   }
   .story .banntxt p {
     color: #fff !important;
