--- a/Web/src/assets/css/style.css
+++ b/Web/src/assets/css/style.css
@@ -261,7 +261,6 @@ header .sub li a:after {
   background: url(../images/icons/next.svg) no-repeat right center;
   width: 20px;
   height: 10px;
-  margin-left: 12px;
 }
 #particles {
   width: 100%;
@@ -285,7 +284,6 @@ header .sub li a:after {
   position: relative;
 }
 .story {
-  background: #ccc url(../images/bg-about01.jpg) no-repeat top center fixed;
   background-size: cover;
   margin-top: 0px;
   padding: 100px 0;
@@ -296,7 +294,6 @@ header .sub li a:after {
 .story .banntxt {
   width: 100%;
   margin:auto;
-  text-align: left;
 }
 .story .banvideo {
   width: 50%;
@@ -430,7 +427,6 @@ header .sub li a:after {
   background: url(../images/icons/next.svg) no-repeat right center;
   width: 20px;
   height: 10px;
-  margin-left: 12px;
 }
 .rightdtl .caroblkdtls {
   position: absolute;
@@ -495,7 +491,6 @@ header .sub li a:after {
   background: linear-gradient(90deg, rgba(255,117,29,1) 0%, rgba(208,48,48,1) 100%);
 }
 .hmeprsing .hmeprsingdtl {
-  text-align: left;
   padding: 15px;
 }
 .hmeprsing h6 a {
@@ -538,7 +533,6 @@ header .sub li a:after {
 }
 .hmeproduct .caroprod {
   width: 94%;
-  margin-left: 3%;
 }
 .hmeblog {
   padding: 60px 0;
@@ -764,12 +758,6 @@ footer .foonav ul li a {
 #collections .collblk .prodright {
   width: 65%;
 }
-#collections:nth-child(odd) .collblk .prodflex .prodright {
-  padding-left: 40px;
-}
-#collections:nth-child(even) .collblk .prodflex .prodright {
-  padding-right: 40px;
-}
 #collections .collblk.collbg1 {
   margin-top: 90px;
   background-color: #ffe5ce;
@@ -834,7 +822,6 @@ footer .foonav ul li a {
 .collcaro .colldtls {
   background: #fff;
   padding: 15px;
-  text-align: left;
   /*height: 150px;*/
   -webkit-box-shadow: 0 0 6px 2px rgba(0,0,0,0.1);
   box-shadow: 0 0 6px 2px rgba(0,0,0,0.1);
@@ -984,10 +971,6 @@ footer .foonav ul li a {
   line-height:32px;
   color:#666666;
   margin-bottom: 20px;
-}
-.fast-text {
-  padding-left: 6%;
-  border-left: 1px solid #ccc;
 }
 #story .row.fast-text-container {
   align-items: flex-start;
@@ -1175,19 +1158,9 @@ img.over {
   padding-left: 0px;
   padding-bottom: 15px;
 }
-.title-box  h3 {
+.title-box h3 {
   font-size: 22px;
   position: relative;
-  padding-left: 15px;
-}
-.title-box h3:before {
-  position: absolute;
-  top: 0px;
-  left: 0;
-  width: 3px;
-  height: 20px;
-  background: #ffbf00;
-  content: "";
 }
 .quick-contact-box {
   position: relative;
@@ -1209,22 +1182,18 @@ img.over {
   list-style: none;
 }
 .quick-contact-box ul li:first-child {
-  padding-left: 35px;
-  background: url(../images/icons/cont-ph.png) no-repeat left center;
+  background: url(../images/icons/cont-ph.png) no-repeat;
   background-size: auto 95%;
 }
 .quick-contact-box ul li:nth-child(2) {
-  padding-left: 35px;
-  background: url(../images/icons/cont-fax.png) no-repeat left center;
+  background: url(../images/icons/cont-fax.png) no-repeat;
   background-size: auto 95%;
 }
 .quick-contact-box ul li:nth-child(3) {
-  padding-left: 35px;
-  background: url(../images/icons/cont-mail.png) no-repeat left center;
+  background: url(../images/icons/cont-mail.png) no-repeat;
   background-size: auto 95%;
 }
 .quick-contact-box ul li:nth-child(4) {
-  padding-left: 35px;
   /* background: url(../images/icons/cont-map.png) no-repeat left center; */
   background-size: auto 95%;
 }
@@ -1242,7 +1211,6 @@ img.over {
   display: block;
   margin-bottom: 15px;
   position: relative;
-  padding-left: 20px;
 }
 .titleblk ul li:before {
   content:'';
@@ -1252,7 +1220,6 @@ img.over {
   background:#e7b51f;
   border-radius:50%;
   position:absolute;
-  left:0;
   top:5px;
 }
 .map {
@@ -1483,16 +1450,12 @@ h3 {
 }
 .blogcontent blockquote p {
   margin-bottom: 0;
-  padding-left: 60px;
   font-size: 24px;
   font-weight: 300;
   position: relative;
   line-height: 1.5;
-  border-left: 3px solid #e7b51f;
 }
 cite {
-  padding-left: 60px;
-  text-align: left;
   margin-top: 15px;
   display: block;
   width: 100%;
@@ -1512,8 +1475,10 @@ cite {
   border-bottom: none;
 }
 .bloglist li .postimg {
-  width:450px;
-  margin-right:50px;
+  flex-basis: 27%;
+}
+.bloglist li .postdtls {
+  flex-basis: 73%;
 }
 .bloglist li .postdtls h6 {
   background-color: #666;
@@ -1554,7 +1519,6 @@ cite {
   background: url(../images/icons/next.svg) no-repeat right center;
   width: 20px;
   height: 10px;
-  margin-left: 12px;
 }
 .policy {
   margin-bottom: 40px;
@@ -1576,7 +1540,6 @@ cite {
 }
 .policy ul {
   list-style: disc;
-  margin-left: 20px;
   margin-bottom: 30px;
 }
 
@@ -1587,7 +1550,6 @@ cite {
   line-height: 24px;
   font-weight: 400;
   color: #4b4b4b;
-  text-align: left;
 }
 
 .policy a {
@@ -1815,7 +1777,6 @@ cite {
   margin-top: 0px;
   display: inline-block;
   border-radius: 4px;
-  margin-right: 10px;
 }
 .btnbuy:hover {
   background-color: #d1992f;
@@ -1833,13 +1794,16 @@ cite {
   font-weight: 400;
 }
 .product-meta li span {
+  display: inline-block;
+}
+.product-meta li span.value {
   color: #292b2c;
   font-weight: 500;
   text-decoration: none;
   -webkit-transition: all 0.3s ease-in-out;
   transition: all .3s ease-in-out;
 }
-.product-meta li:last-child span {
+.product-meta li:last-child span.value {
   color: #2ea349;
 }
 .proddesc {
@@ -1900,7 +1864,6 @@ cite {
 .sizeabaya h6, .quantity h6 {
   font-size: 16px;
   margin-bottom: 10px;
-  margin-right: 15px;
 }
 .size-list li {
   display: inline-block;
@@ -1914,7 +1877,6 @@ cite {
   width: 100%;
   display: block;
   cursor: pointer;
-  margin: 0 15px 0 0;
   width: 40px;
   height: 40px;
   line-height:37px;
@@ -2005,12 +1967,13 @@ cite {
   font-size: 14px;
   padding-top: 15px;
 }
-.termsblk label {
-  margin-left: 5px;
-}
 .related {
   background: #ffe5ce;
   padding: 20px 0;
+}
+header .social a.lang {
+  font-size: 18px;
+  font-family: 'Tahoma', sansserif;
 }
 
 /* Responsive CSS */
@@ -2048,6 +2011,7 @@ cite {
   .hmeproduct .caroprod {
     width: 100%;
     margin-left: 0%;
+    margin-right: 0%;
     padding: 0 15px;
   }
   .story .banntxt h1, .titleblk h1 {
@@ -2063,7 +2027,6 @@ cite {
     padding-left: 50px;
   }
   .story {
-    background: #ccc url(../images/bg-about01.jpg) no-repeat top center fixed;
     background-size: auto 100%;
   }
   .hmeblog ul li .blkgdtl h3 {
@@ -2109,7 +2072,6 @@ cite {
     flex-direction: column;
   }
   .story {
-    background: #ccc url(../images/bg-about01.jpg) no-repeat top center;
     background-size: auto 100%;
   }
   .hmeblog ul {
@@ -2529,7 +2491,6 @@ cite {
     width: 100%;
   }
   .story {
-    background: #fff url(../images/bg-about01.jpg) no-repeat top left;
     background-size: auto 250px;
     padding-top: 270px;
     padding-bottom: 30px;
